--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "deg-online",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -19,9 +19,11 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.34.0",
     "@types/node": "^18.11.17",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.30.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
